[metadata]
name = heare-core-skills
author = Sean Fitzgerald
author_email = seanfitz@heare.io
description = Core skills for the Heare Agent Platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/heare-io/heare-core-skills
project_urls =
    Bug Tracker = https://github.com/heare-io/heare-core-skills/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
install_requires =
    heare-config>=1.0.1
    adapt-parser==1.0.0
    websocket-client>=1.2.3
    pyee>=8.2.2
setup_requires =
    setuptools_scm

[options.packages.find]
where = src

